--- a/src/styles/MangaInfo.scss
+++ b/src/styles/MangaInfo.scss
@@ -1,6 +1,10 @@
 .manga-info-container {
   background-color: #fff;
   padding: 20px 20px 0 20px;
+  //border: 1px solid;
+  //border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+  //border-radius: 3px;
+  margin-top: 20px;
   .upper-part-container {
     .info-title {
       //font-size: 28px;
